ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host:
    http:
      paths:
      - path: /shopfront/?(.*)
        pathType: Prefix
        backend:
          service:
            name: shopfront
            port:
              name: 
              number: 8010
      - path: /stockmanager/?(.*)
        pathType: Prefix
        backend:
          service:
            name: stockmanager
            port:
              name:
              number: 8030
      - path: /productcatalogue/?(.*)
        pathType: Prefix
        backend:
          service:
            name: productcatalogue
            port:
              name: 
              number: 8020
